--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -1,3 +1,9 @@
+.img {
+  height: 100vh;
+  width: 100vw;
+  object-fit: cover;
+}
+
 .container {
   padding: 0 2rem;
 }
@@ -13,9 +19,14 @@
 }
 
 .footer {
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
   display: flex;
   flex: 1;
   padding: 2rem 0;
+  background-color: #fafafa;
   border-top: 1px solid #eaeaea;
   justify-content: center;
   align-items: center;
