--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -1,7 +1,18 @@
 .img {
-  height: 100vh;
-  width: 100vw;
-  object-fit: cover;
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.label {
+  position: fixed;
+  right: 0;
+  bottom: 3rem;
 }
 
 .container {
@@ -19,7 +30,7 @@
 }
 
 .footer {
-  position: absolute;
+  position: fixed;
   left: 0;
   right: 0;
   bottom: 0;
@@ -51,6 +62,8 @@
 
 .date {
   margin: 0 32px;
+  font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
+    Bitstream Vera Sans Mono, Courier New, monospace;
 }
 
 .footer a {
