--- a/styles/Main.module.css
+++ b/styles/Main.module.css
@@ -52,10 +52,11 @@
 
 .btn {
   margin: 4px;
-  padding: 4px 8px;
+  padding: 8px 12px;
   background-color: #000;
   border: 1px solid #262626;
   border-radius: 8px;
+  font-size: 0.75rem;
   transition: background-color 0.15s ease, border-color 0.15s ease;
 }
 .btn:hover,
@@ -69,13 +70,6 @@
   margin: 0 32px;
   font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
     Bitstream Vera Sans Mono, Courier New, monospace;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
 }
 
 .title a {
